--- a/Flask-App/templates/index.html
+++ b/Flask-App/templates/index.html
@@ -135,26 +135,26 @@ https://stackoverflow.com/questions/2368784/draw-on-html5-canvas-using-a-mouse
       <div class="collapse navbar-collapse" id="navbarText">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item">
-            <a class="nav-link" href="https://github.com/Lexie88rus"><i class="fab fa-github" style="color:white; font-size: 20px;"></i></a>
+            <a class="nav-link" href="https://github.com/flictionary"><i class="fab fa-github" style="color:white; font-size: 20px;"></i></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="https://lexie88rus.github.io"><i class="fas fa-link" style="color:white; font-size: 20px;"></i></a>
+            <a class="nav-link" href="https://github.com/flictionary-frontend"><i class="fas fa-github" style="color:white; font-size: 20px;"></i></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="https://www.linkedin.com/in/aleksandra-deis-0912/"><i class="fab fa-linkedin-in" style="color:white; font-size: 20px;"></i></a>
+            <a class="nav-link" href="www.linkedin.com/in/datascisteven"><i class="fab fa-linkedin" style="color:white; font-size: 20px;"></i></a>
           </li>
         </ul>
       </div>
     </nav>
 
     <!-- page header -->
-    <div class="jumbotron" style="background-image: url({{url_for('static', filename='jumbotron.png')}})">
+    <!-- div class="jumbotron" style="background-image: url({{url_for('static', filename='jumbotron.png')}})" -->
         <div class="container">
             <h1 class="text-center">Quick Draw!</h1>
             <p class="text-center">Draw an image and click "Done!" to recognize it!</p>
         </div>
-    </div>
-
+    <!-- /div -->
+ 
     <!-- Block for the main content of the page: canvas and model predictions -->
     <div class="row justify-content-center">
       <!-- Canvas element to draw images-->
