--- a/Flask-App/templates/hook.html
+++ b/Flask-App/templates/hook.html
@@ -4,7 +4,7 @@
 {% block message %}
 <div class="row justify-content-center">
   <div class="alert alert-success ml-5 col-10" role="alert">
-      <h4 class="alert-heading" align="center" >Is this a {{result}}?</h4>
+      <h4 class="alert-heading">Is this a {{result}}?</h4>
   </div>
 </div>
 <div class="row">
